# guesslang

./: .gitignore  .gitmodules  README.md  task.md
dlguesslang/guesslang/: CMakeLists.txt
dlibguesslang/: CMakeLists.txt  deps.h  guesslang.h  main.cpp  test_dlib.cpp  utf8pp.h
dlibguesslang/guesslang/: CMakeLists.txt  config.h  deps.h  guesslang.cpp  guesslang.h  main.cpp  qtquirks.cpp  qtquirks.h
pyguesslang/: README.md  __init__.py  features.py  klassify.py  kmeans.py  markov.py  paragraph.py
pytest/: guesslang.py  kmeans.py  markov.py  markov1.py
qtguesslang/guesslang/: CMakeLists.txt  config.h  deps.h  guesslang.cpp  guesslang.h  main.cpp  qclassifier.h  qclassifier.h.old.h  qcounter.h  qlanguage.h  qparagraph.h  qtquirks.cpp  utf8pp.h
qtguesslang/guesslang/QQ/: QQ.h  qqalgorithms.h  qqdataframe.h  qqmap.h  qqmatrix.h  qqshared.h  qqstring.h  qqutil.cpp  qqutil.h
qtguesslang/guesslang/test/: test_qq.cpp
